# codesim

./: .gitignore  CMakeLists.txt  README.md  codesim.cpp
capted/: LICENSE  Makefile
capted/lib/: Capted.h  CostModel.h  InputParser.h  StringNodeData.h
capted/lib/distance/: AllPossibleMappings.h  Apted.h  TreeEditDistance.h
capted/lib/node/: Node.h  NodeIndexer.h
capted/lib/util/: debug.cpp  debug.h  int.h
capted/tests/: generate_large_test.py  large_test_case.json  main.cpp
cmake/Modules/: Findlibclang.cmake
test/: demo.cpp  f1.c  f2.c  sample2.c  sample3.c  sample4.c  sample6.c
